Bug 213900 - openvpn connections with x509 without username and password does not work
Summary: openvpn connections with x509 without username and password does not work
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-09 22:28 UTC by Herbert Graeber
Modified: 2009-11-17 15:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Herbert Graeber 2009-11-09 22:28:15 UTC
Version:           0.9.svn1043876 (using KDE 4.3.1)
OS:                Linux
Installed from:    openSUSE RPMs

knetworkmanager for kde4 fail when trying to connect to openvpn iwth x509 certificate and key, but without username and password. /var/log/NetworkManager contains the message

    VPN connection '...' (openvpn) filed to connect: 'No VPN secrets!'"

Connecting with username and password instead and leaving both input fields empty works.
Comment 1 Will Stephenson 2009-11-17 12:41:16 UTC
Does this configuration work in GNOME, with nm-applet?
Comment 2 Will Stephenson 2009-11-17 15:03:35 UTC
Just received a patch for this.
Comment 3 Will Stephenson 2009-11-17 15:06:06 UTC
SVN commit 1050511 by wstephens:

Keep NetworkManager happy when using X509 with no password/username;
send a placeholder.  This happens in a different place in the code to in
GNOME, which does not store this in the settings but inserts it into the
openvpn settings stream on connect.

Patch by Vladimir Prus  <ghost@cs.msu.su>, received with thanks.
BUG: 213900


 M  +3 -0      openvpnwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1050511