Keep NetworkManager happy when using X509 with no password/username; send a placeholder.  This happens in a different place in the code to in GNOME, which does not store this in the settings but inserts it into the openvpn settings stream on connect.

Patch by Vladimir Prus  <ghost@cs.msu.su>, received with thanks.
BUG: 213900